<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notara_</string>
    <string name="recurring_cycles">Ciclos de Repetição</string>
    <string name="no_cycles_found">Nenhum ciclo ativo encontrado.</string>
    <string name="delete_cycle_title">Excluir Ciclo?</string>
    <string name="delete_cycle_msg">
        <![CDATA[Tem certeza que deseja excluir este ciclo de repetição?]]>
    </string>
    <string name="notes_on_date">Notas de %s</string>
    <string name="edited_at">Editado em %s</string>
    <string name="locked_note_title">* %s</string>
    <string name="locked_note_content">Conteúdo Protegido</string>
    <string name="transparency_value">%d%%</string>
    <string name="stop_alarm_open">PARAR ALARME E ABRIR</string>
    <string name="day_sun">D</string>
    <string name="day_mon">S</string>
    <string name="day_tue">T</string>
    <string name="day_wed">Q</string>
    <string name="day_thu">Q</string>
    <string name="day_fri">S</string>
    <string name="day_sat">S</string>
    <string name="today_notes">Notas de hoje</string>
    <string name="checklist_title_hint">Título da Lista</string>
    <string name="date_label">Data</string>
    <string name="add_item_hint">Adicionar um novo item&#8230;</string>
    <string name="note_title_hint">Título</string>
    <string name="note_content_hint">Comece a escrever&#8230;</string>
    <string name="search_notes_hint">Pesquisar notas&#8230;</string>
    <string name="search_hint">Pesquisar&#8230;</string>
    <string name="note_content_preview_placeholder">Conteúdo da nota&#8230;</string>
    <string name="no_notes_found">Nenhuma nota encontrada</string>
    <string name="new_note">Nova Nota</string>
    <string name="display_and_grid">Exibição e Grade</string>
    <string name="grid_columns">Colunas na Grade</string>
    <string name="default_grid_columns">2</string>
    <string name="uniform_note_size">Tamanho de Notas Uniforme</string>
    <string name="use_24h_format">Usar Formato 24h</string>
    <string name="personalization">Personalização</string>
    <string name="theme_preto">Preto</string>
    <string name="theme_branco">Branco</string>
    <string name="widget_transparency">Transparência de Widgets</string>
    <string name="default_transparency">100%</string>
    <string name="colors_in_notifications">Cores em Notificações</string>
    <string name="colors_in_alarms">Cores em Alarmes</string>

    <string name="privacy_and_security">Privacidade e Segurança</string>
    <string name="device_biometrics">Biometria do Dispositivo</string>
    <string name="app_password">Senha do Aplicativo</string>
    <string name="planning_and_repetitions">Planejamento e Repetições</string>
    <string name="view_recurring_notes">Ver Notas e Listas Recorrentes</string>
    <string name="management">Gerenciamento</string>
    <string name="manage_trash">Gerenciar Lixeira</string>
    <string name="clear_all_data">Limpar Todos os Dados</string>
    <string name="app_tagline">Produtividade e Segurança</string>
    <string name="no_notes_available">Nenhuma nota disponível</string>
    <string name="title_placeholder">Título</string>
    <string name="setup_recurrence">Configurar Repetição</string>
    <string name="enable_recurrence">Ativar Repetição</string>
    <string name="repeat_on_days">Repetir nos dias:</string>
    <string name="empty_trash">Esvaziar Lixeira</string>
    <string name="trash_is_empty">A lixeira está vazia</string>
    <string name="frequency">Frequência</string>
    <string name="day_full_sun">Dom</string>
    <string name="day_full_mon">Seg</string>
    <string name="day_full_tue">Ter</string>
    <string name="day_full_wed">Qua</string>
    <string name="day_full_thu">Qui</string>
    <string name="day_full_fri">Sex</string>
    <string name="day_full_sat">Sáb</string>
    <string name="day_placeholder">1</string>
    <string name="checklist_item_hint">Item da lista</string>
    <string name="widget_label_1x1">Título</string>
    <string name="widget_label_1x2">Lista</string>
    <string name="widget_label_2x2">Nota Completa</string>
    <string name="widget_config_title">Escolha a cor de fundo da lista</string>

    <string name="backup_section">Backup</string>
    <string name="backup_export">Fazer Backup</string>
    <string name="backup_encrypted">Backup Criptografado</string>
    <string name="backup_restore">Restaurar Backup</string>
    <string name="backup_password_hint">Digite a senha do backup</string>
    <string name="backup_password_confirm">Confirmar Senha</string>
    <string name="backup_empty">Nenhuma nota para backup</string>
    <string name="backup_success">Backup salvo com sucesso</string>
    <string name="backup_restored">%d nota(s) restaurada(s)</string>
    <string name="backup_invalid">Arquivo de backup inválido</string>
    <string name="backup_wrong_password">Senha incorreta</string>
    <string name="backup_read_error">Erro ao ler arquivo de backup</string>
    <string name="backup_password_mismatch">Senhas não conferem</string>

    <string name="period_dawn">da madrugada</string>
    <string name="period_morning">da manhã</string>
    <string name="period_afternoon">da tarde</string>
    <string name="period_night">da noite</string>
</resources>
